kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: extension-system
  labels:
    name: extension-system
